Uma melhoria nos estilos

--- a/index.html
+++ b/index.html
@@ -276,8 +276,9 @@
         <div id="conctar">
             <br>
             <section>
-                <span > <img src="icons/mail_40dp_FILL0_wght400_GRAD0_opsz40.png" alt="">
-                    dinelvilanculos@gmail.com</span>
+                <span> <img src="icons/mail_40dp_FILL0_wght400_GRAD0_opsz40.png" alt="">
+                    <p>dinelvilanculos@gmail.com</p>
+                </span>
             </section>
             <section>
                 <span> <img src="icons/call_40dp_FILL0_wght400_GRAD0_opsz40.png" alt="">
