updates in the body

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
         <div class="producto">
             <img src="frutas/Acacia_vermelha.png" alt="">
-            <span class="name">Acácia vermelha</span> <br>
+            <span class="name">Acácia amarela</span> <br>
             <span class="price">250.00</span> <span>MZN</span> <br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
@@ -112,7 +112,7 @@
         </div>
         <div class="producto">
             <img src="frutas/Acacia_amarela.png" alt="">
-            <span class="name">Acácia</span> <br>
+            <span class="name">Acácia vermelha</span> <br>
             <span class="price">250.00</span> <span>MZN</span> <br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
@@ -272,7 +272,7 @@
     </main>
 
     <footer>
-        <p>Conctacte-nos!🔍</p>
+        <p>Conctacte-nos!📠</p>
         <div id="conctar">
             <br>
             <section>
