--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         </div>  
         <div class="producto">
             <img src="Flores & Orna/Lingua da Sogra2.png" alt="">
-            <span class="name">Lingua da Sogra</span> <br>
+            <span class="name">Língua da Sogra</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
