adicao de novos componentes no footer

--- a/index.html
+++ b/index.html
@@ -283,6 +283,10 @@
             <section>
                 <span> <img src="icons/call_40dp_FILL0_wght400_GRAD0_opsz40.png" alt="">
                     +258 848393826</span>
+            </section>
+            <section>
+                 <span> <img src="icons/store_40dp_FILL0_wght400_GRAD0_opsz40.png" alt="">
+                    <a href="https://maps.app.goo.gl/Tye1rUfWgeswhHwLA" target="_blank" id="loja">Loja Fisica 👈</a></span>
             </section> <br>
             <p>Valores de transportes não estão inclusos no preços.</p> <br>
             <p>Powerby  <a href="https://dineliacv.github.io/Static/" target="_blank" style= "text-decoration: none; color: green; text-decoration: underline;">🔰Dinel Southman🌍</a></p>
