--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
     </nav>
     <main>
         <section id="infor" style="display: none;">
-            <p>Brevemente teremos serviços de Jardinagem</p>
+            <p>Brevemente teremos serviços de Jardinagem.</p>
         </section>
 
         <section id="not" style="display: none" >
-            <p>A altura de algumas plantas irão influenciar no preço</p>
+            <p>A altura de algumas plantas irão influenciar no preço.</p>
         </section>
         <p>PLANTAS DE FRUTAS</p>
         <div class="producto">
@@ -286,7 +286,7 @@
             </section>
             <section>
                  <span> <img src="icons/store_40dp_FILL0_wght400_GRAD0_opsz40.png" alt="">
-                    <a href="https://maps.app.goo.gl/Tye1rUfWgeswhHwLA" target="_blank" id="loja">Loja Fisica 👈</a></span>
+                    <a href="https://maps.app.goo.gl/Tye1rUfWgeswhHwLA" target="_blank" id="loja">Loja Física 👈</a></span>
             </section> <br>
             <p>Valores de transportes não estão inclusos no preços.</p> <br>
             <p>Powerby  <a href="https://dineliacv.github.io/Static/" target="_blank" style= "text-decoration: none; color: green; text-decoration: underline;">🔰Dinel Southman🌍</a></p>
@@ -301,12 +301,12 @@
 
             $('#info').click(()=>{
                 $("#infor").fadeIn(1000)
-                $("#infor").fadeOut(4000)
+                $("#infor").fadeOut(3000)
             })
 
             $("#notification").click(()=>{
-                $("#not").fadeIn(2000)
-                $("#not").fadeOut(4500)
+                $("#not").fadeIn(3200)
+                $("#not").fadeOut(4000)
             })
             $(".addToCart").mouseenter(()=>{
                 $(".addToCart").css({'background-color':'lightpink'})
