remocao de um nome

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
         <div class="producto">
             <img src="Flores & Orna/Sem nome.png" alt="">
-            <span class="name">Cacto sem Picos</span> <br>
+            <span class="name">---</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
