nomes das plantas em falta

--- a/index.html
+++ b/index.html
@@ -156,31 +156,31 @@
         </div>
         <div class="producto">
             <img src="Flores & Orna/Espinhas.png" alt="">
-            <span class="name">Espinhas de Cristo</span> <br>
+            <span class="name">Coroa de Cristo</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
             <img src="Flores & Orna/Sem nome04.png" alt="">
-            <span class="name">---</span> <br>
+            <span class="name">Crassula ovata</span> <br>
             <span class="price">150.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
         <div class="producto">
             <img src="Flores & Orna/Sem nome.png" alt="">
-            <span class="name">---</span> <br>
+            <span class="name">Sapatinho do Jardim</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
             <img src="Flores & Orna/Sem nome2.png" alt="">
-            <span class="name">---</span> <br>
+            <span class="name">Kleinia amaniensis</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
             <img src="Flores & Orna/Sem nome3.png" alt="">
-            <span class="name">-----</span> <br>
+            <span class="name">Abacaxi-roxo</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
@@ -192,31 +192,31 @@
         </div> 
         <div class="producto">
             <img src="Flores & Orna/sem nome5.png" alt="">
-            <span class="name">---</span> <br>
+            <span class="name">Orquídeas</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
         <div class="producto">
             <img src="Flores & Orna/Sem nome6.png" alt="">
-            <span class="name">---</span> <br>
+            <span class="name">Piperácea</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
             <img src="Flores & Orna/Sem nome7.png" alt="">
-            <span class="name">---</span> <br>
+            <span class="name">Crista do Peru</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
             <img src="Flores & Orna/sem nome8.png" alt="">
-            <span class="name">---</span> <br>
+            <span class="name">Aráceas</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
             <img src="Flores & Orna/Sem nome9.png" alt="">
-            <span class="name">---</span> <br>
+            <span class="name">Dracena-vermelha</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
@@ -228,43 +228,43 @@
         </div>  
         <div class="producto">
             <img src="Flores & Orna/Lingua da Sogra2.png" alt="">
-            <span class="name">Língua da Sogra</span> <br>
+            <span class="name">Espada-de-são-jorge</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
             <img src="Flores & Orna/Untitled.png" alt="">
-            <span class="name">---</span> <br>
+            <span class="name">Clorófito</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>  
         <div class="producto">
             <img src="Flores & Orna/Untitled1.png" alt="">
-            <span class="name">---</span> <br>
+            <span class="name">Flor-leopardo</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
             <img src="Flores & Orna/Untitled2.png" alt="">
-            <span class="name">---</span> <br>
+            <span class="name">Begônia</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
             <img src="Flores & Orna/Untitled3.png" alt="">
-            <span class="name">---</span> <br>
+            <span class="name">Café-de-salão</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>  
         <div class="producto">
             <img src="Flores & Orna/Untitled4.png" alt="">
-            <span class="name">---</span> <br>
+            <span class="name">Bromeliáceas</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
             <img src="Flores & Orna/Untitled5.png" alt="">
-            <span class="name">---<span> <br>
+            <span class="name">Crista do Peru<span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
