Correcao do nome de uma planta

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
         <div class="producto">
-            <img src="Flores & Orna/Sem nome.png" alt="">
+            <img src="Flores & Orna/sem nome.png" alt="">
             <span class="name">Sapatinho do Jardim</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
