--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     </nav>
     <main>
         <section id="infor" style="display: none;">
-            <p>Brevemente teremos serviços de Jardinagem.</p>
+            <p style="display: none;">Brevemente teremos serviços de Jardinagem.</p>
+            <p>30% de desconto na Compra dos Morangueiros, válido entre 01/07 e 20/07 </p>
         </section>
 
         <section id="not" style="display: none" >
@@ -77,7 +78,7 @@
         <div class="producto">
             <img src="frutas/Pera_Abacati.png" alt="">
             <span class="name">Pera Abacati</span> <br>
-            <span class="price">160.00</span> <span>MZN</span> <br>
+            <span class="price">200.00</span> <span>MZN</span> <br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
         <div class="producto">
