Atualizacao do site

--- a/index.html
+++ b/index.html
@@ -52,67 +52,67 @@
         </section>
         <p>PLANTAS DE FRUTAS</p>
         <div class="producto">
-            <img src="frutas/Morango.png" alt="">
+            <img src="frutas/Morango.png" alt="Morangueiro" class="plantas">
             <span class="name">Morangueiro</span> <br>
             <span class="price">200.00</span> <span>MZN</span> <br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
         <div class="producto">
-            <img src="frutas/Larangeira.png" alt="">
+            <img src="frutas/Larangeira.png" alt="Larangeira">
             <span class="name">Larangeira</span> <br>
-            <span class="price">200.00</span> <span>MZN</span> <br>
+            <span class="price">180.00</span> <span>MZN</span> <br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
         <div class="producto">
-            <img src="frutas/Tangerina.png" alt="">
+            <img src="frutas/Tangerina.png" alt=" Arvore de Tangerina">
             <span class="name">Árvore de Tangerina</span> <br>
-            <span class="price">200.00</span> <span>MZN</span> <br>
+            <span class="price">180.00</span> <span>MZN</span> <br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
         <div class="producto">
-            <img src="frutas/Maceira.png" alt="">
+            <img src="frutas/Maceira.png" alt="Macieira">
             <span class="name"> Árvore de Maça</span> <br>
             <span class="price">200.00</span> <span>MZN</span> <br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
         <div class="producto">
-            <img src="frutas/Pera_Abacati.png" alt="">
+            <img src="frutas/Pera_Abacati.png" alt="Pera Abacati">
             <span class="name">Pera Abacati</span> <br>
-            <span class="price">200.00</span> <span>MZN</span> <br>
+            <span class="price">180.00</span> <span>MZN</span> <br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
         <div class="producto">
-            <img src="frutas/Acacia_vermelha.png" alt="">
+            <img src="frutas/Acacia_vermelha.png" alt="Acacia Amarela">
             <span class="name">Acácia amarela</span> <br>
-            <span class="price">250.00</span> <span>MZN</span> <br>
+            <span class="price">200.00</span> <span>MZN</span> <br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
         <div class="producto">
-            <img src="frutas/Ata Coracao d'boi.png" alt="">
+            <img src="frutas/Ata Coracao d'boi.png" alt="Ata Coracao de Boi">
             <span class="name">Ata coração de Boi</span> <br>
-            <span class="price">200.00</span> <span>MZN</span> <br>
+            <span class="price">180.00</span> <span>MZN</span> <br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
         <div class="producto">
-            <img src="frutas/Ata silvestre.png" alt="">
+            <img src="frutas/Ata silvestre.png" alt="Ata Silvestre">
             <span class="name">Ata Silvestre</span> <br>
+            <span class="price">180.00</span> <span>MZN</span> <br>
+            <button class="addToCart">Adicionar ao carrinho</button>
+        </div>
+        <div class="producto">
+            <img src="frutas/Cajueiro.png" alt="Cajueiro">
+            <span class="name">Cajueiro</span> <br>
             <span class="price">200.00</span> <span>MZN</span> <br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
         <div class="producto">
-            <img src="frutas/Cajueiro.png" alt="">
-            <span class="name">Cajueiro</span> <br>
-            <span class="price">250.00</span> <span>MZN</span> <br>
-            <button class="addToCart">Adicionar ao carrinho</button>
-        </div>
-        <div class="producto">
-            <img src="frutas/Tamara.png" alt="">
+            <img src="frutas/Tamara.png" alt="Tamareira">
             <span class="name">Támara</span> <br>
             <span class="price">200.00</span> <span>MZN</span> <br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
         <div class="producto">
-            <img src="frutas/Acacia_amarela.png" alt="">
+            <img src="frutas/Acacia_amarela.png" alt="Acacia Vermelha">
             <span class="name">Acácia vermelha</span> <br>
             <span class="price">250.00</span> <span>MZN</span> <br>
             <button class="addToCart">Adicionar ao carrinho</button>
@@ -120,151 +120,151 @@
 
         <p>FLORES & ORNAMENTAÇÃO</p>
         <div class="producto">
-            <img src="Flores & Orna/Cacto2_01.png" alt="">
+            <img src="Flores & Orna/Cacto2_01.png" alt="Cacto">
             <span class="name">Cacto</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
         <div class="producto">
-            <img src="Flores & Orna/Cacto1.png" alt="">
+            <img src="Flores & Orna/Cacto1.png" alt="Cacto">
             <span class="name">Cacto</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
         <div class="producto">
-            <img src="Flores & Orna/Cacto3.png" alt="">
+            <img src="Flores & Orna/Cacto3.png" alt="Cacto">
             <span class="name">Cacto<span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
         <div class="producto">
-            <img src="Flores & Orna/Cacto4.png" alt="">
+            <img src="Flores & Orna/Cacto4.png" alt="Cacto">
             <span class="name">Cacto<span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
         <div class="producto">
-            <img src="Flores & Orna/cacto5.png" alt="">
+            <img src="Flores & Orna/cacto5.png" alt="Cacto">
             <span class="name">Cacto<span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
         <div class="producto">
-            <img src="Flores & Orna/Cacto6.png" alt="">
+            <img src="Flores & Orna/Cacto6.png" alt="Cacto">
             <span class="name">Cacto<span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
         <div class="producto">
-            <img src="Flores & Orna/Espinhas.png" alt="">
+            <img src="Flores & Orna/Espinhas.png" alt="Coroa de Cristo">
             <span class="name">Coroa de Cristo</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
-            <img src="Flores & Orna/Sem nome04.png" alt="">
+            <img src="Flores & Orna/Sem nome04.png" alt="Crassula ovata">
             <span class="name">Crassula ovata</span> <br>
             <span class="price">150.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
         <div class="producto">
-            <img src="Flores & Orna/sem nome.png" alt="">
+            <img src="Flores & Orna/sem nome.png" alt="Sapatinho do Jardim">
             <span class="name">Sapatinho do Jardim</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
-            <img src="Flores & Orna/Sem nome2.png" alt="">
+            <img src="Flores & Orna/Sem nome2.png" alt="Kleinia amaniensis">
             <span class="name">Kleinia amaniensis</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
-            <img src="Flores & Orna/Sem nome3.png" alt="">
+            <img src="Flores & Orna/Sem nome3.png" alt="Abacaxi Roxo">
             <span class="name">Abacaxi-roxo</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
-            <img src="Flores & Orna/Haloifera.png" alt="">
+            <img src="Flores & Orna/Haloifera.png" alt="Aloi Vera">
             <span class="name">Aloi vera </span> <br>
             <span class="price">260.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
-            <img src="Flores & Orna/sem nome5.png" alt="">
+            <img src="Flores & Orna/sem nome5.png" alt="Orquídeas">
             <span class="name">Orquídeas</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>
         <div class="producto">
-            <img src="Flores & Orna/Sem nome6.png" alt="">
+            <img src="Flores & Orna/Sem nome6.png" alt="Piperácea">
             <span class="name">Piperácea</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
-            <img src="Flores & Orna/Sem nome7.png" alt="">
+            <img src="Flores & Orna/Sem nome7.png" alt="Crista do Peru">
             <span class="name">Crista do Peru</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
-            <img src="Flores & Orna/sem nome8.png" alt="">
+            <img src="Flores & Orna/sem nome8.png" alt="Aráceas">
             <span class="name">Aráceas</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
-            <img src="Flores & Orna/Sem nome9.png" alt="">
+            <img src="Flores & Orna/Sem nome9.png" alt="Dracena-vermelha">
             <span class="name">Dracena-vermelha</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
-            <img src="Flores & Orna/Aloi vera.png" alt="">
+            <img src="Flores & Orna/Aloi vera.png" alt="Aloi Vera">
             <span class="name">Aloi Vera</span> <br>
             <span class="price">260.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>  
         <div class="producto">
-            <img src="Flores & Orna/Lingua da Sogra2.png" alt="">
+            <img src="Flores & Orna/Lingua da Sogra2.png" alt="Espada-de-são-jorge">
             <span class="name">Espada-de-são-jorge</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
-            <img src="Flores & Orna/Untitled.png" alt="">
+            <img src="Flores & Orna/Untitled.png" alt="Clorófito">
             <span class="name">Clorófito</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>  
         <div class="producto">
-            <img src="Flores & Orna/Untitled1.png" alt="">
+            <img src="Flores & Orna/Untitled1.png" alt="Flor-leopardo">
             <span class="name">Flor-leopardo</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
-            <img src="Flores & Orna/Untitled2.png" alt="">
+            <img src="Flores & Orna/Untitled2.png" alt="Begônia">
             <span class="name">Begônia</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
-            <img src="Flores & Orna/Untitled3.png" alt="">
+            <img src="Flores & Orna/Untitled3.png" alt="Café-de-salão">
             <span class="name">Café-de-salão</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div>  
         <div class="producto">
-            <img src="Flores & Orna/Untitled4.png" alt="">
+            <img src="Flores & Orna/Untitled4.png" alt="Bromeliáceas">
             <span class="name">Bromeliáceas</span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
         </div> 
         <div class="producto">
-            <img src="Flores & Orna/Untitled5.png" alt="">
+            <img src="Flores & Orna/Untitled5.png" alt="Crista do Peru">
             <span class="name">Crista do Peru<span> <br>
             <span class="price">250.00</span> <span>MZN</span><br>
             <button class="addToCart">Adicionar ao carrinho</button>
@@ -289,7 +289,9 @@
                  <span> <img src="icons/store_40dp_FILL0_wght400_GRAD0_opsz40.png" alt="">
                     <a href="https://maps.app.goo.gl/Tye1rUfWgeswhHwLA" target="_blank" id="loja">Loja Física 👈</a></span>
             </section> <br>
-            <p>Valores de transportes não estão inclusos no preços.</p> <br>
+            <p id="lastp"> Na compras das plantas, os valores do transporte são da sua responsabilidade,
+                nós apenas semeamos as plantas de graça para si.</p>
+            <br>
             <p>Powerby  <a href="https://dineliacv.github.io/Static/" target="_blank" style= "text-decoration: none; color: green; text-decoration: underline;">🔰Dinel Southman🌍</a></p>
         </div>
     </footer>
