Correcao  no footer

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main>
         <section id="infor" style="display: none;">
             <p style="display: none;">Brevemente teremos serviços de Jardinagem.</p>
-            <p>30% de desconto na Compra dos Morangueiros, válido entre 01/07 e 20/07 </p>
+            <p>30% de desconto na Compra dos Morangueiros, válido entre 01/07 e 05/08 </p>
         </section>
 
         <section id="not" style="display: none" >
@@ -289,7 +289,7 @@
                  <span> <img src="icons/store_40dp_FILL0_wght400_GRAD0_opsz40.png" alt="">
                     <a href="https://maps.app.goo.gl/Tye1rUfWgeswhHwLA" target="_blank" id="loja">Loja Física 👈</a></span>
             </section> <br>
-            <p id="lastp"> Na compras das plantas, os valores do transporte são da sua responsabilidade,
+            <p id="lastp"> Na compra das plantas, os valores de transporte são da sua responsabilidade,
                 nós apenas semeamos as plantas de graça para si.</p>
             <br>
             <p>Powerby  <a href="https://dineliacv.github.io/Static/" target="_blank" style= "text-decoration: none; color: green; text-decoration: underline;">🔰Dinel Southman🌍</a></p>
@@ -304,7 +304,7 @@
 
             $('#info').click(()=>{
                 $("#infor").fadeIn(1000)
-                $("#infor").fadeOut(3000)
+                $("#infor").fadeOut(4000)
             })
 
             $("#notification").click(()=>{
